Disable DRI for Ivy Bridge (and later) until we update Mesa.

This is a stop-gap for PR 48916.